last update before presentation

--- a/public/index.html
+++ b/public/index.html
@@ -169,8 +169,9 @@
           style.innerHTML = '#app { background: '+traductions.values[4][4]+'; font-family: "'+traductions.values[5][1]+'",Avenir, Helvetica, Arial, sans-serif!important; margin-top: 0px!important;} \
           .navbar.box,.navbar-menu{background: '+traductions.values[3][4]+'!important;} .navbar-menu a, .email_user{color : '+traductions.values[3][3]+'!important;}\
           a:hover,a:focus{border-radius:10px;background-color: '+traductions.values[6][4]+'!important;color: '+traductions.values[6][3]+'!important;} \
-          h1,h2,h3,h4,label,p,.num-trophee,.subtitle2.trie{color: '+traductions.values[4][3]+'!important;} .card-content h1,.card-content h2,.card-content h3,.card-content p {color:'+traductions.values[7][3]+'!important;}\
-          .card-content{background:'+traductions.values[7][4]+'!important;}';
+          h1,h2,h3,h4,label,p,.num-trophee,.subtitle2.trie,.share_realisation{color: '+traductions.values[4][3]+'!important;} .card-content h1,.card-content h2,.card-content h3,.card-content p {color:'+traductions.values[7][3]+'!important;}\
+          .card-content{background:'+traductions.values[7][4]+'!important;}\
+          .badge{background:'+traductions.values[18][4]+'!important;color:'+traductions.values[18][3]+'!important;}';
           console.log(traductions.values);
         }
       }
