--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,7 @@
       function updateSigninStatus(isSignedIn) {
 	  console.log(isSignedIn);
 		localStorage.setItem("isSignedIn", isSignedIn);
+    console.log("isSignedIn");
 		if (isSignedIn) {
 		
 			
@@ -127,7 +128,7 @@
 				handle_get_data_excel(false);
 			}
 			//window.location.href="http://localhost:8072/login";
-		} else {
+		} else if(window.location.origin.includes("localhost:")) {
 			localStorage.clear();
 		}
 		/*
@@ -155,6 +156,9 @@
        */
       function handleSignoutClick(event) {
         gapi.auth2.getAuthInstance().signOut();
+        if(!(window.location.origin.includes("localhost:"))) {
+			    localStorage.clear();
+		    }
       }
 
 
